// Copyright (c) 2024 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package com.digitalasset.canton.domain.admin.v0;

import "com/digitalasset/canton/crypto/v0/crypto.proto";
import "com/digitalasset/canton/protocol/v0/sequencing.proto";
import "com/digitalasset/canton/protocol/v1/sequencing.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

service DomainService {
  rpc ListServiceAgreementAcceptances(google.protobuf.Empty) returns (ServiceAgreementAcceptances);
  rpc GetDomainParameters(google.protobuf.Empty) returns (com.digitalasset.canton.protocol.v0.StaticDomainParameters);
  rpc GetDomainParametersVersioned(GetDomainParameters.Request) returns (GetDomainParameters.Response);
}

message GetDomainParameters {
  message Request {}

  message Response {
    oneof parameters {
      com.digitalasset.canton.protocol.v0.StaticDomainParameters parameters_v0 = 1;
      com.digitalasset.canton.protocol.v1.StaticDomainParameters parameters_v1 = 2;
    }
  }
}

message ServiceAgreementAcceptances {
  repeated ServiceAgreementAcceptance acceptances = 1;
}

message ServiceAgreementAcceptance {
  string agreement_id = 1;
  string participant_id = 2;

  // The signature by the participant when accepting the agreement as part of the auth token challenge response protocol
  com.digitalasset.canton.crypto.v0.Signature signature = 3;

  // When the agreement was first accepted
  google.protobuf.Timestamp timestamp = 4;
}
